--- a/개인별index.html
+++ b/개인별index.html
@@ -122,5 +122,134 @@
   <li><a href="https://youngjaekim22.github.io/formText1.html"target="_blank">(7-3 실습 2) formText1.html</a></li>
   </ol>
 </section>
+<section>
+  <p>2020-04-28 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/formRadio1.html"target="_blank">(8-1 실습 1) formRadio1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/formCheckbox1.html"target="_blank">(8-1 실습 2) formCheckbox1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/formSearch1.html"target="_blank">(8-1 실습 3) formSearch1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/formDateTime1.html"target="_blank">(8-1 실습 4) formDateTime1.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-05-07 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/formEmailAuto1.html"target="_blank">(8-2 실습 1) formEmailAuto1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/formFormaction1.html"target="_blank">(8-2 실습 2) formFormaction1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/formSelect1.html"target="_blank">(8-2 실습 3) formSelect1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/formMselect1.html"target="_blank">(8-3 실습 1) formMselect1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/formTextarea1.html"target="_blank">(8-3 실습 2) formTextarea1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/basicSemantic4.html"target="_blank">(8-3 실습 3) basicSemantic4.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/basicSemanticMember1.html"target="_blank">(8-3 실습 4) basicSemanticMember1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/anchor3.html"target="_blank">(8-3 실습 5) anchor2.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/jspintro.html"target="_blank">(8-3 실습 6) jspintro.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-05-12 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/basicCssIntro.html"target="_blank">(9-1 실습 1) basicCssIntro1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/basicSimple1.html"target="_blank">(9-1 실습 2) basicSimple1.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-05-14 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/inline1.html"target="_blank">(9-2 실습 1) inline1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/embed1.html"target="_blank">(9-2 실습 2) embed1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/outstyle1.html"target="_blank">(9-2 실습 3) outstyle1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/sampleDom.html"target="_blank">(9-3 실습 1) sampleDom.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/htmlDom.html"target="_blank">(9-3 실습 2) htmlDom.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/member1.html"target="_blank">(9-3 실습 3) member1.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-05-16 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/selectortag.html"target="_blank">(10-1 실습 1) selectortag.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/selectorcls.html"target="_blank">(10-1 실습 2) selectorcls.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/selectorid.html"target="_blank">(10-1 실습 3) selectorid.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-05-19 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/pseudoselector.html"target="_blank">(10-2 실습 1) pseudoselector.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/pseudoelmt.html"target="_blank">(10-2 실습 2) pseudoelmt.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-05-21 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/complexDesc.html"target="_blank">(10-3 실습 1) complexDesc.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/complexChild.html"target="_blank">(10-3 실습 2) complexChild.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/complexBro.html"target="_blank">(10-3 실습 3) complexBro.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssText1.html"target="_blank">(11-1 실습 1) cssText1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssText2.html"target="_blank">(11-1 실습 2) cssText2.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssFont1.html"target="_blank">(11-1 실습 3) cssFont1.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-05-26 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/cssWidthHeight1.html"target="_blank">(11-2 실습 1) cssWidthHeight1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssBg1.html"target="_blank">(11-2 실습 2) cssBg1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssBorder1.html"target="_blank">(11-2 실습 3) cssBorder1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssMargin1.html"target="_blank">(11-3 실습 1) cssMargin1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssPadding1.html"target="_blank">(11-3 실습 2) cssPadding1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssBox1.html"target="_blank">(11-3 실습 3) cssBox1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssBox2.html"target="_blank">(11-3 실습 4) cssBox2.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssBox3.html"target="_blank">(11-3 실습 5) cssBox3.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssBox4.html"target="_blank">(11-3 실습 6) cssBox4.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-05-28 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/cssDisp1.html"target="_blank">(12-1 실습 1) cssDisp1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssVis1.html"target="_blank">(12-1 실습 2) cssVis1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssDisplayinlineBlock1.html"target="_blank">(12-1 실습 3) cssDisplayInlineBlock1.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-05-28 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/cssStatic1.html"target="_blank">(12-2 실습 1) cssStatic1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssRelative1.html"target="_blank">(12-2 실습 2) cssRelative1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssFixed1.html"target="_blank">(12-2 실습 3) cssFixed1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssAbsolute1.html"target="_blank">(12-2 실습 4) cssAbsolute1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssAbsoluteBody.html"target="_blank">(12-2 실습 5) cssAbsoluteBody1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssOverflow1.html"target="_blank">(12-3 실습 1) cssOverflow1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssOverflowImage1.html"target="_blank">(12-3 실습 2) cssOverflowImage1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssFloat1.html"target="_blank">(12-3 실습 3) cssFloat1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssClear1.html"target="_blank">(12-3 실습 4) cssClear1.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-06-02 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/cssList.html"target="_blank">(13-1 실습 1) cssList1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssList2.html"target="_blank">(13-1 실습 2) cssList2.html</a></li>
+  </ol>
+</section>
+<section>
+  <p>2020-06-04 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/login1.html"target="_blank">(13-2 실습 1) login1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/login2.html"target="_blank">(13-2 실습 2) login2.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/login3.html"target="_blank">(13-2 실습 3) login3.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/login4.html"target="_blank">(13-2 실습 4) login4.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/login5.html"target="_blank">(13-2 실습 5) login5.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/memb1.html"target="_blank">(13-2 실습 6) memb1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/memb2.html"target="_blank">(13-2 실습 7) memb2.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/memb3.html"target="_blank">(13-2 실습 8) memb3.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/memb4.html"target="_blank">(13-2 실습 9) memb4.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/memb5.html"target="_blank">(13-2 실습 10) memb5.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssTable1.html"target="_blank">(13-3 실습 1) cssTable1.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssTable2.html"target="_blank">(13-3 실습 2) cssTable2.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssTable3.html"target="_blank">(13-3 실습 3) cssTable3.html</a></li>
+  <li><a href="https://youngjaekim22.github.io/cssTable4.html"target="_blank">(13-3 실습 4) cssTable4.html</a></li>
+  </ol>
+</section>
 </body>
 </html>
