--- a/cssClear1.html
+++ b/cssClear1.html
@@ -11,7 +11,7 @@
       .img1{float:left; margin:5px;}
       .img2{clear:both; margin:5px;}
     </style>
-    <title>CSS float 실습</title>
+    <title>CSS clear 실습</title>
   </head>
   <body>
     <section>
