--- a/개인별index.html
+++ b/개인별index.html
@@ -251,5 +251,11 @@
   <li><a href="https://youngjaekim22.github.io/cssTable4.html"target="_blank">(13-3 실습 4) cssTable4.html</a></li>
   </ol>
 </section>
+<section>
+  <p>2020-06-09 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/rwd0.html"target="_blank">(14-1 실습 1) rwd0.html</a></li>
+  </ol>
+</section>
 </body>
 </html>
