--- a/개인별index.html
+++ b/개인별index.html
@@ -257,5 +257,13 @@
   <li><a href="https://youngjaekim22.github.io/rwd0.html"target="_blank">(14-1 실습 1) rwd0.html</a></li>
   </ol>
 </section>
+<section>
+  <p>2020-06-11 실습 내용</p>
+  <ol type="1">
+  <li><a href="https://youngjaekim22.github.io/rwd2.html"target="_blank">(14-1 실습 1) rwd2.html</a></li>
+    <li><a href="https://youngjaekim22.github.io/rwd4.css"target="_blank">(14-1 실습 1) rwd4.css</a></li>
+    <li><a href="https://youngjaekim22.github.io/rwd4.html"target="_blank">(14-1 실습 1) rwd4.html</a></li>
+  </ol>
+</section>
 </body>
 </html>
