--- a/AAA.html
+++ b/AAA.html
@@ -68,7 +68,7 @@
     <header>
       <img class="imgleft" src="dju.jpg" width:100px; heigh:100px;><h2>ePortfolio</h2>
     </header>
-    <nav class="col-3 col-t-3">
+    <nav>
       <ul>
         <li><a href="http://www.dju.ac.kr/kor/html/main.htm" target="_blank">대전대학교</a></li>
         <li><a href="lecture.html">수강(예정) 과목</a></li>
@@ -78,30 +78,30 @@
         <li><a href="club.html">동아리 및 봉사활동</a></li>
       </ul>
     </nav>
-    <section class="col-6 col-t-9">
-      <section class="col-6 col-t-9">
+    <section class="col-9 col-t-12">
+      <section class="col-9 col-t-12">
         <h3>사이트 소개</h3>
         <p>사이트 이름 : ePortfolio.html</p>
         <p>사이트 제작자 : 20171347 컴퓨터공학과 김영재</p>
         <p>사이트 제작 목적 : 향후 취업을 위한 기술 이력서를 인터넷 홈페이지로 작성 및 관리를 하기 위함입니다.</p>
       </section>
-      <section class="col-6 col-t-9">
+      <section class="col-9 col-t-12">
         <h3>수강(예정) 과목</h3>
         <p style="color:green">수강 과목과 수강 예정 과목과 함께 전공 교과 과정표를 확인하실 수 있습니다.</p>
       </section>
-      <section class="col-6 col-t-9">
+      <section class="col-9 col-t-12">
         <h3>자격증 및 면허</h3>
         <p style="color:green">취득 및 취득 예정인 자격증 및 면허를 확인하실 수 있습니다.</p>
       </section>
-      <section class="col-6 col-t-9">
+      <section class="col-9 col-t-12">
         <h3>교내외 경진대회</h3>
         <p style="color:green">참가 및 참가 예정인 교내외 경진대회를 확인하실 수 있습니다.</p>
       </section>
-      <section class="col-6 col-t-9">
+      <section class="col-9 col-t-12">
         <h3>프로젝트</h3>
         <p style="color:green">학기말 프로젝트 수행 내역을 확인하실 수 있습니다.</p>
       </section>
-      <section class="col-6 col-t-9">
+      <section class="col-9 col-t-12">
         <h3>동아리 및 봉사활동</h3>
         <p style="color:green">동아리 활동 및 봉사 활동에 대해 확인하실 수 있습니다.</p>
       </section>
