--- a/lecture.html
+++ b/lecture.html
@@ -4,7 +4,39 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
-      header, nav, section, article, aside, footer{border:10px groove gray; margin:5px; padding:8px; width:1000px;}
+      *{box-sizing:border-box; padding:0; margin:0;}
+      .row::after{content:""; clear:both; display:table;}
+      [class*="col-"]{float:left; padding:10px;}
+      [class*="col-"]{width:100%}   
+      @media only screen and (min-width: 600px){
+      .col-t-1{width:8.33%;}
+      .col-t-2{width:16.66%;}
+      .col-t-3{width:23.7%;}
+      .col-t-4{width:33.33%;}
+      .col-t-5{width:41.66%;}
+      .col-t-6{width:50%;}
+      .col-t-7{width:58.33%;}
+      .col-t-8{width:66.66%;}
+      .col-t-9{width:75%;}
+      .col-t-10{width:83.33%;}
+      .col-t-11{width:91.66%;}
+      .col-t-12{width:100%;}
+      }
+      @media only screen and (min-width: 768px){
+      .col-1{width:8.33%;}
+      .col-2{width:16.66%;}
+      .col-3{width:23.7%;}
+      .col-4{width:33.33%;}
+      .col-5{width:41.66%;}
+      .col-6{width:50%;}
+      .col-7{width:58.33%;}
+      .col-8{width:66.66%;}
+      .col-9{width:75%;}
+      .col-10{width:83.33%;}
+      .col-11{width:91.66%;}
+      .col-12{width:100%;}
+      }
+      header, nav, section, article, aside, footer{border:10px groove gray; margin:5px; padding:8px; width:100%;}
       *{padding:0; margin:0;}
       .bodybackground{background-color:RGB(201, 214, 229);}
       .imgleft{float:left; width:30px;}
@@ -46,12 +78,12 @@
         <li><a href="club.html">동아리 및 봉사활동</a></li>
       </ul>
     </nav>
-    <section>
-      <section>
+    <section class="col-9 col-t-12">
+      <section class="col-12 col-t-12">
         <h3>수강(예정) 과목</h3>
         <p style="color:green">수강 과목과 수강 예정 과목과 함께 전공 교과 과정표를 확인하실 수 있습니다.</p>
       </section>
-      <section>
+      <section class="col-12 col-t-12">
         <h3>수강한 과목</h3>
         <p style="color:green">1학년 1학기 : 교양 필수 - 프로그래밍 기초 및 실습</p>
         <p style="color:green">1학년 1학기 : 교양 필수 - 수학 1</p>
@@ -61,7 +93,7 @@
         <p style="color:green">1학년 2학기 : 교양 선택 - 프로그래밍 응용 및 실습</p>
         <p style="color:green">1학년 2학기 : 전공 필수 - 비전 설계</p>
       </section>
-      <section>
+      <section class="col-12 col-t-12">
         <h3>수강중인 과목</h3>
         <p style="color:green">2학년 1학기 : 전공 선택 - 인터넷 응용</p>
         <p style="color:green">2학년 1학기 : 전공 필수 - C++ 프로그래밍</p>
@@ -69,7 +101,7 @@
         <p style="color:green">2학년 1학기 : 전공 필수 - 자료구조 및 실습</p>
         <p style="color:green">2학년 1학기 : 전공 선택 - 오토마타와 응용</p>
       </section>
-      <section>
+      <section class="col-12 col-t-12">
         <h3>수강 예정 과목</h3>
         <p style="color:green">2학년 2학기 : 전공 필수 - JAVA 프로그래밍</p>
         <p style="color:green">2학년 2학기 : 전공 필수 - 수치계산 및 응용</p>
@@ -85,13 +117,13 @@
         <p style="color:green">4학년 2학기 : 전공 필수 - 캡스톤 디자인 2</p>
         <p style="color:green">4학년 2학기 : 전공 필수 - 딥 러닝</p>
       </section>
-      <section>
+      <section class="col-12 col-t-12">
         <h3>교과 과정표</h3>
         <img src="교과과정표1.png">
         <img src="교과과정표2.png" width:550px;>
       </section>
     </section>
-    <aside>
+    <aside class="col-3 col-t-12">
       <ul>
         <li><a href="http://www.dju.ac.kr/kor/html/main.htm"><img src="dju.jpg" target="_blank" alt="대전대학교"/></a></li>
       </ul>
