--- a/license.html
+++ b/license.html
@@ -4,7 +4,39 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
-      header, nav, section, article, aside, footer{border:10px groove gray; margin:5px; padding:8px; width:1000px;}
+      *{box-sizing:border-box; padding:0; margin:0;}
+      .row::after{content:""; clear:both; display:table;}
+      [class*="col-"]{float:left; padding:10px;}
+      [class*="col-"]{width:100%}   
+      @media only screen and (min-width: 600px){
+      .col-t-1{width:8.33%;}
+      .col-t-2{width:16.66%;}
+      .col-t-3{width:23.7%;}
+      .col-t-4{width:33.33%;}
+      .col-t-5{width:41.66%;}
+      .col-t-6{width:50%;}
+      .col-t-7{width:58.33%;}
+      .col-t-8{width:66.66%;}
+      .col-t-9{width:75%;}
+      .col-t-10{width:83.33%;}
+      .col-t-11{width:91.66%;}
+      .col-t-12{width:100%;}
+      }
+      @media only screen and (min-width: 768px){
+      .col-1{width:8.33%;}
+      .col-2{width:16.66%;}
+      .col-3{width:23.7%;}
+      .col-4{width:33.33%;}
+      .col-5{width:41.66%;}
+      .col-6{width:50%;}
+      .col-7{width:58.33%;}
+      .col-8{width:66.66%;}
+      .col-9{width:75%;}
+      .col-10{width:83.33%;}
+      .col-11{width:91.66%;}
+      .col-12{width:100%;}
+      }
+      header, nav, section, article, aside, footer{border:10px groove gray; margin:5px; padding:8px; width:100%;}
       *{padding:0; margin:0;}
       .bodybackground{background-color:RGB(201, 214, 229);}
       .imgleft{float:left; width:30px;}
@@ -46,25 +78,25 @@
         <li><a href="club.html">동아리 및 봉사활동</a></li>
       </ul>
     </nav>
-    <section>
-      <section>
+    <section class="col-9 col-t-12">
+      <section class="col-12 col-t-12">
         <h3>자격증 및 면허</h3>
         <p style="color:green">취득 및 취득 예정인 자격증 및 면허를 확인하실 수 있습니다.</p>
       </section>
-      <section>
+      <section class="col-12 col-t-12">
         <h3>정보처리 산업기사 (예정)</h3>
         <p style="color:green">설명 : 정보처리산업기사란 응시자격을 갖춘 자가 산업인력공단에서 시행하는 정보처리산업기사 시험에 합격하여 그 자격을 취득한 자를 말한다. 검정방식은 기존의 검정형과 과정평가형이 병행하여 운영되고 있다. 검정형 시험은 필기시험과 실기시험으로 이루어지며, 필기시험은 객관식으로 100점을 만점으로 하여 과목당 40점 이상, 전 과목 평균 60점 이상이면 합격한다. 실기시험은 필답형으로 100점을 만점으로 하여 평균 60점 이상이면 합격한다.</p>
       </section>
-      <section>
+      <section class="col-12 col-t-12">
         <h3>정보보안 산업기사 (예정)</h3>
         <p style="color:green">설명 : 정보보안산업기사란 응시자격을 갖춘 자가 한국인터넷진흥원에서 시행하는 정보보안산업기사 시험에 합격하여 그 자격을 취득한 자를 말한다. 정보보안기사 · 정보보안산업기사는 정보보안 분야에서 국내 유일의 국가기술자격 검정시험이다. 정보보안산업기사는 민간자격 제도로 운영됐던 정보보호전문가 자격시험(SIS, Specialist for Information Security)이 국가기술자격으로 승격된 시험으로, 한국인터넷진흥원(KISA)에서 2013년부터 시행하고 있다.</p>
       </section>
-      <section>
+      <section class="col-12 col-t-12">
         <h3>CISA (예정)</h3>
         <p style="color:green">설명 : ISACA가 실시하는 시험에 합격하고 정보 시스템 감사 경험이 5년 이상인 사람에게 주어지는 자격이다. CISA의 자격 갱신은 ISACA가 지정하는 교육과정을 3년간 120학점 이상 수강하면 가능하다. 컴퓨터 시스템의 유효성과 효율, 신뢰성, 안전성을 확보하기 위해 독립적인 입장에서 일정한 시스템 감사 기준에 의거하여 시스템을 종합적으로 점검 ·평가하고, 관계자에게 조언 및 권고하는 작업을 수행한다. 회계 시스템에 관해서는 공인 회계사가 외부 감사로서 시스템 감사인의 역할을 담당하는 경우도 있다.</p>
       </section>
     </section>
-    <aside>
+    <aside class="col-3 col-t-12">
       <ul>
         <li><a href="http://www.hrdkorea.or.kr/" target="_blank">한국산업인력공단</a></li>
         <li><a href="https://www.kisa.or.kr/main.jsp" target="_blank">한국인터넷진흥원</a></li>
