--- a/club.html
+++ b/club.html
@@ -4,7 +4,39 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
-      header, nav, section, article, aside, footer{border:10px groove gray; margin:5px; padding:8px; width:1000px;}
+      *{box-sizing:border-box; padding:0; margin:0;}
+      .row::after{content:""; clear:both; display:table;}
+      [class*="col-"]{float:left; padding:10px;}
+      [class*="col-"]{width:100%}   
+      @media only screen and (min-width: 600px){
+      .col-t-1{width:8.33%;}
+      .col-t-2{width:16.66%;}
+      .col-t-3{width:23.7%;}
+      .col-t-4{width:33.33%;}
+      .col-t-5{width:41.66%;}
+      .col-t-6{width:50%;}
+      .col-t-7{width:58.33%;}
+      .col-t-8{width:66.66%;}
+      .col-t-9{width:75%;}
+      .col-t-10{width:83.33%;}
+      .col-t-11{width:91.66%;}
+      .col-t-12{width:100%;}
+      }
+      @media only screen and (min-width: 768px){
+      .col-1{width:8.33%;}
+      .col-2{width:16.66%;}
+      .col-3{width:23.7%;}
+      .col-4{width:33.33%;}
+      .col-5{width:41.66%;}
+      .col-6{width:50%;}
+      .col-7{width:58.33%;}
+      .col-8{width:66.66%;}
+      .col-9{width:75%;}
+      .col-10{width:83.33%;}
+      .col-11{width:91.66%;}
+      .col-12{width:100%;}
+      }
+      header, nav, section, article, aside, footer{border:10px groove gray; margin:5px; padding:8px; width:100%;}
       *{padding:0; margin:0;}
       .bodybackground{background-color:RGB(201, 214, 229);}
       .imgleft{float:left; width:30px;}
@@ -46,24 +78,24 @@
         <li><a href="project.html">프로젝트</a></li>
       </ul>
     </nav>
-    <section>
+    <section class="col-9 col-t-12">
       <section>
         <h3><a herf="club.html" target="_blank">동아리 및 봉사활동</a></h3>
         <p style="color:green">동아리 활동 및 봉사 활동에 대해 확인하실 수 있습니다.</p>
       </section>
-      <section>
+      <section class="col-12 col-t-12">
         <h3>동아리 - 레디칼</h3>
         <p style="color:green">설명 : 대전대학교 통기타동아리입니다.</p>
         <p style="color:green">활동내용 및 소감 : 기타를 배움으로써 예술적 소향을 높이고 연주회를 준비함으로써 협력과 도전을 통한 성취감을을 느낄 수 있었습니다.</p>
       </section>
-      <section>
+      <section class="col-12 col-t-12">
         <h3>봉사활동 - 재능기부 (예정)</h3>
         <p style="color:green">학기 : 2학년 1학기</p>
         <p style="color:green">설명 : 학생들에세 프로그래밍을 가르쳐주는 봉사활동입니다.</p>
         <p style="color:green">활동내용 및 소감 : 학생들에게 프로그래밍을 가르쳐주면서 보람을 느끼고 과정을 준비함으로써 학업역량의 확인해 보는 시간이 될 것 같습니다.</p>
       </section>
     </section>
-    <aside>
+    <aside class="col-3 col-t-12">
       <ul>
         <li><a href="http://www.dju.ac.kr/kor/html/main.htm"><img src="dju.jpg" alt="대전대학교"/></a></li>
       </ul>
