--- a/club.html
+++ b/club.html
@@ -79,7 +79,7 @@
       </ul>
     </nav>
     <section class="col-9 col-t-12">
-      <section>
+      <section class="col-12 col-t-12">
         <h3><a herf="club.html" target="_blank">동아리 및 봉사활동</a></h3>
         <p style="color:green">동아리 활동 및 봉사 활동에 대해 확인하실 수 있습니다.</p>
       </section>
