--- a/lecture.html
+++ b/lecture.html
@@ -119,8 +119,8 @@
       </section>
       <section class="col-12 col-t-12">
         <h3>교과 과정표</h3>
-        <img src="교과과정표1.png">
-        <img src="교과과정표2.png" width:550px;>
+        <img class="col-t-12" src="교과과정표1.png">
+        <img class="col-t-12" src="교과과정표2.png" width:550px;>
       </section>
     </section>
     <aside class="col-3 col-t-12">
