--- a/개인별index.html
+++ b/개인별index.html
@@ -265,5 +265,11 @@
     <li><a href="https://youngjaekim22.github.io/rwd4.html"target="_blank">(14-1 실습 1) rwd4.html</a></li>
   </ol>
 </section>
+<section>
+  <p>2020-05-17 ~ 2020-06-15 개인별 프로젝트</p>
+  <ol type="1">
+    <li><a href="https://youngjaekim22.github.io/ePortfolio.html"target="_blank">(개인별 프로젝트) ePortfolio.html</a></li>
+  </ol>
+</section>
 </body>
 </html>
